--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -191,7 +191,7 @@ Pour le fluide considéré, les épaisseurs de couches limites sont tracées en 
     \label{fig:dKdV}
 \end{figure}
 
-Ce cycle où les transformations sont isothermes est celui de Stirling, pour lequel les oscillations de pression et de vitesse sont en phase. Cependant, ce cycle représente un comportement asymptotique prenant place dans une machine thermoacoustique, tout comme le cycle de Brayton. Dans la réalité, il a été montré dans la littérature portant sur les machines à plusieurs sources qu'il existe une vitesse acoustique optimale pour une pression acoustique donnée~\cite{poignand_analysis_2013, poignand_etude_2006, poignand_optimal_2007, poignand_thermoacoustic_2011}. Les puissances thermiques pompées et le gradient de températures le long du régénérateur sont les plus élevées lorsque la vitesse acoustique atteint une amplitude donnée par
+Ce cycle où les transformations sont isothermes est celui de Stirling, pour lequel les oscillations de pression et de vitesse sont en phase. Cependant, ce cycle représente un comportement asymptotique prenant place dans une machine thermoacoustique, tout comme le cycle de Brayton. Dans la réalité, il a été montré dans la littérature portant sur les machines à plusieurs sources qu'il existe une vitesse acoustique optimale pour une pression acoustique donnée~\cite{poignand_analysis_2013, poignand_etude_2006, poignand_optimal_2007, poignand_thermoacoustic_2011}. \echaf{Les puissances thermiques pompées et le gradient de températures le long du régénérateur sont les plus élevées lorsque la vitesse acoustique atteint une amplitude donnée par}
 
 \begin{subequations}
 	\begin{align}
@@ -214,6 +214,35 @@ Pour un régénérateur dans lequel les processus sont isothermes, ces équation
 \end{subequations}
 avec $g_D = \frac{f_\kappa + \Prandtl f_\nu^*}{(1-\Prandtl^2)|1-f_\nu^*|^2}$ et $g = \frac{f_\kappa-f_\nu^*}{(1+\Prandtl)(1-f_\nu^*)}$.
 
+\begin{figure}[!ht]
+    \centering
+	\begin{subfigure}{.47\textwidth}
+		\centering
+		\external{fig_DeltaEC_u_opt_COP}
+%		\externalremake
+		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_COP}
+		\caption{}
+		\label{fig:DeltaEC_u_opt_COP}
+	\end{subfigure}
+	\begin{subfigure}{.47\textwidth}
+		\centering
+		\external{fig_DeltaEC_u_opt_DeltaT}
+%		\externalremake
+		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_DeltaT}
+		\caption{}
+		\label{fig:DeltaEC_u_opt_DeltaT}
+	\end{subfigure}
+	\begin{subfigure}{.47\textwidth}
+		\centering
+		\external{fig_DeltaEC_u_opt_Qth}
+%		\externalremake
+		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_Qth}
+		\caption{}
+		\label{fig:DeltaEC_u_opt_Qth}
+	\end{subfigure}  
+    \caption{Valeurs en fonction de l'amplitude et la phase du débit acoustique \ref{fig:DeltaEC_u_opt_COP} du coefficient de performance, \ref{fig:DeltaEC_u_opt_DeltaT} de l'écart de température de part et d'autre du régénérateur, et \ref{fig:DeltaEC_u_opt_Qth} du flux de chaleur thermoacoustique.}
+    \label{fig:DeltaEC_u_opt}
+\end{figure}
 
 Au final, les dimensions du régénérateur sont résumés dans le tableau~\ref{tab:GeometrieTAC}, et les paramètres du fluides pour les points de fonctionnement du \textsc{Tacot}, dans le tableau~\ref{tab:ParamHydrauTAC}.
 
