Chap 3 + figure Chap2 colormaps

--- a/fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_Qth.tex
+++ b/fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_Qth.tex
@@ -1,5 +1,5 @@
 \begin{tikzpicture}
-    \def\width{.9*\textwidth};
+    \def\width{.4*\textwidth};
     \def\height{\width};
     \def\spx{.25cm};
     \def\spy{1.25cm};
@@ -9,21 +9,25 @@
  
     
     \begin{axis}[width={\width},height={\height},
-    grid=both, minor tick num=10, 
-    grid style={line width=.1pt, draw=gray!10},
-    major grid style={line width=.2pt,draw=gray!50},
+    view={0}{90},		
+    colorbar,
+%    colorbar style={at={(.02,.98)},anchor=north west, 
+%    	height=1cm, width=2cm},
+%    grid=both, minor tick num=10, 
+%    grid style={line width=.1pt, draw=gray!10},
+%    major grid style={line width=.2pt,draw=gray!50},
     xlabel={Amplitude du débit $|u|_{\sf opt}$ (\unit{\cubic\meter\per\second})},
-    ylabel={Phase du débit $\angle u_{\sf opt}$ (\unit{\cubic\meter\per\second})},
+    ylabel={Phase du débit $\angle u_{\sf opt}$ (\unit{\degree})},
 %    xmin=0,xmax=75,ymin=0,ymax=.5/1000,
-%    xtick={0,25,50,75,100},
+%    xtick={1e-4,4.5e-4,1},
 %    ytick={0,1e-4,...,10e-4},
 %    ytick={0,2.81/100000,9.1120/100000,1.4452/10000,
 %    	2.5/10000,5/10000,1/1000},
     scaled y ticks = false,
-    domain=0:100,
+%    domain=0:100,
     legend cell align={left},
     legend style = {at={($(1,1)+(-2mm,-2mm)$)},anchor = north east,rounded corners}
     ]
-        
+    	\addplot3[surf, mesh/rows=21, shader=interp, patch type=bilinear] file {../fig/fig_DeltaEC_u_opt/data/data_DeltaEC_u_opt_Qth.txt}; 
     \end{axis}
 \end{tikzpicture}
