--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -216,15 +216,15 @@ avec $g_D = \frac{f_\kappa + \Prandtl f_\nu^*}{(1-\Prandtl^2)|1-f_\nu^*|^2}$ et 
 
 \begin{figure}[!ht]
     \centering
-	\begin{subfigure}{.47\textwidth}
+	\begin{subfigure}{.97\textwidth}
 		\centering
-		\external{fig_DeltaEC_u_opt_COP}
+		\external{fig_DeltaEC_u_opt_Qth}
 %		\externalremake
-		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_COP}
+		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_Qth}
 		\caption{}
-		\label{fig:DeltaEC_u_opt_COP}
+		\label{fig:DeltaEC_u_opt_Qth}
 	\end{subfigure}
-	\begin{subfigure}{.47\textwidth}
+	\begin{subfigure}{.97\textwidth}
 		\centering
 		\external{fig_DeltaEC_u_opt_DeltaT}
 %		\externalremake
@@ -232,15 +232,18 @@ avec $g_D = \frac{f_\kappa + \Prandtl f_\nu^*}{(1-\Prandtl^2)|1-f_\nu^*|^2}$ et 
 		\caption{}
 		\label{fig:DeltaEC_u_opt_DeltaT}
 	\end{subfigure}
-	\begin{subfigure}{.47\textwidth}
+	
+	\vspace{1em}	
+
+	\begin{subfigure}{.97\textwidth}
 		\centering
-		\external{fig_DeltaEC_u_opt_Qth}
+		\external{fig_DeltaEC_u_opt_COP}
 %		\externalremake
-		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_Qth}
+		\input{../fig/fig_DeltaEC_u_opt/tex/fig_DeltaEC_u_opt_COP}
 		\caption{}
-		\label{fig:DeltaEC_u_opt_Qth}
+		\label{fig:DeltaEC_u_opt_COP}
 	\end{subfigure}  
-    \caption{Valeurs en fonction de l'amplitude et la phase du débit acoustique \ref{fig:DeltaEC_u_opt_COP} du coefficient de performance, \ref{fig:DeltaEC_u_opt_DeltaT} de l'écart de température de part et d'autre du régénérateur, et \ref{fig:DeltaEC_u_opt_Qth} du flux de chaleur thermoacoustique.}
+    \caption{Valeurs \ref{fig:DeltaEC_u_opt_Qth} du flux de chaleur thermoacoustique, \ref{fig:DeltaEC_u_opt_DeltaT} de l'écart de température de part et d'autre du régénérateur, et \ref{fig:DeltaEC_u_opt_COP} du coefficient de performance, en fonction de l'amplitude et la phase du débit acoustique $u$. \echaf{ces data sont nimp}}
     \label{fig:DeltaEC_u_opt}
 \end{figure}
 
